# bacen-currency-api-integration

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: collector.ipynb
src/data_analysis/: data.ipynb
src/etl/: collector.ipynb  collector.py
src/sql/: create-table.sql
