[tool.poetry]
name = "bacen-currency-api-integration"
version = "0.1.0"
description = ""
authors = ["Ant4res <pr1v4t3.lm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
